*** Added APIClient class for creating the service and access methods, implemented the service methods for the API client * Added local db storage for media items using Room and its corresponding DAO methods * Added corresponding models for the search response and media item from API calls * Added logger and network connectivity checker * Added ViewModel for the MainActivity screen * Added MainActivity views and components * Added Adapter for the media list in the MainActivity * Added View bindings for RecyclerView adapter setting and loading of images into ImageView using Glide * Added Preferences, media database and API access in the Application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MList</string>
+    <string name="track_name">Track Name</string>
+    <string name="price">Price</string>
+    <string name="genre">Genre</string>
+    <string name="media_no_results">No media found.</string>
+    <string name="view_last_visited_on">Your last visit to this screen was on %s.</string>
+    <string name="view_last_visited_timestamp_format">E MMMM d, YYYY hh:mm:ss a</string>
+    <string name="media_search_base_url">https://itunes.apple.com</string>
+    <string name="media_search_full_parameters">https://itunes.apple.com/search?term=star&amp;country=au&amp;media=movie&amp;all</string>
 </resources>
