* Added MediaDetailActivity for viewing the details of clicked item * Added persistence on last viewed date of the media

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="track_name">Track Name</string>
     <string name="price">Price</string>
     <string name="genre">Genre</string>
+    <string name="long_description">Long Description</string>
     <string name="media_no_results">No media found.</string>
     <string name="view_last_visited_on">Your last visit to this screen was on %s.</string>
     <string name="view_last_visited_timestamp_format">E MMMM d, YYYY hh:mm:ss a</string>
